--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -186,7 +186,7 @@
     <value>Популярное сейчас</value>
   </data>
   <data name="NoMatchVideo" xml:space="preserve">
-    <value>Не найден соответствующий запросу YouTube видео или аудио поток. Видео может быть недоступно в вашей стране, является частным или использует RTMP (защищенный поток).</value>
+    <value>Не получилось воспроизвести запрошенное видео. Видео может быть недоступно в вашей стране, является частным или использует RTMP (защищенный режим).</value>
   </data>
   <data name="PublishedAt" xml:space="preserve">
     <value>Опубликовано</value>
