--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -174,7 +174,7 @@
     <value>Домой</value>
   </data>
   <data name="JoinedString" xml:space="preserve">
-    <value>с нами с</value>
+    <value>присоединился</value>
   </data>
   <data name="Loading" xml:space="preserve">
     <value>Загрузка...</value>
