--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -240,7 +240,7 @@
     <value>Unsubscribe</value>
   </data>
   <data name="UsingSoftware" xml:space="preserve">
-    <value>Software</value>
+    <value>Third-party software</value>
   </data>
   <data name="Version" xml:space="preserve">
     <value>Version</value>
