--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -264,7 +264,7 @@
     <value>Закрыть</value>
   </data>
   <data name="ErrorMessage" xml:space="preserve">
-    <value>Не получилось выполнить операцию. Пожалуйста попробуйте еще раз.</value>
+    <value>Не получилось выполнить операцию. Пожалуйста попробуйте повторить действие еще раз.</value>
   </data>
   <data name="ErrorTitle" xml:space="preserve">
     <value>Ошибка</value>
