Fix #45 NRE in NavPanel ??????????? ?????? ? ???????? ???????? ???? ?????

--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -278,4 +278,7 @@
   <data name="LikedVideos" xml:space="preserve">
     <value>понравившиеся</value>
   </data>
+  <data name="FeedbackMessage" xml:space="preserve">
+    <value>Напишите свои комментарии, пожелания или предложения здесь</value>
+  </data>
 </root>
