--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -278,4 +278,7 @@
   <data name="LikedVideos" xml:space="preserve">
     <value>liked</value>
   </data>
+  <data name="FeedbackMessage" xml:space="preserve">
+    <value>Type your feedback here</value>
+  </data>
 </root>
