--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -284,4 +284,40 @@
   <data name="Theme" xml:space="preserve">
     <value>Тема</value>
   </data>
+  <data name="Days5Ago" xml:space="preserve">
+    <value>{0} дней назад</value>
+  </data>
+  <data name="DaysAgo" xml:space="preserve">
+    <value>{0} дня назад</value>
+  </data>
+  <data name="MonthAgo" xml:space="preserve">
+    <value>месяц назад</value>
+  </data>
+  <data name="Months4Ago" xml:space="preserve">
+    <value>{0} месяца назад</value>
+  </data>
+  <data name="MonthsAgo" xml:space="preserve">
+    <value>{0} месяцев назад</value>
+  </data>
+  <data name="Today" xml:space="preserve">
+    <value>сегодня</value>
+  </data>
+  <data name="WeekAgo" xml:space="preserve">
+    <value>неделю назад</value>
+  </data>
+  <data name="WeeksAgo" xml:space="preserve">
+    <value>{0} недели назад</value>
+  </data>
+  <data name="YearAgo" xml:space="preserve">
+    <value>год назад</value>
+  </data>
+  <data name="Years4Ago" xml:space="preserve">
+    <value>{0} года назад</value>
+  </data>
+  <data name="YearsAgo" xml:space="preserve">
+    <value>{0} лет назад</value>
+  </data>
+  <data name="Yesterday" xml:space="preserve">
+    <value>вчера</value>
+  </data>
 </root>
