--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -320,4 +320,7 @@
   <data name="Yesterday" xml:space="preserve">
     <value>yesterday</value>
   </data>
+  <data name="Playlists" xml:space="preserve">
+    <value>playlists</value>
+  </data>
 </root>
