--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -323,4 +323,7 @@
   <data name="Playlists" xml:space="preserve">
     <value>playlists</value>
   </data>
+  <data name="PlaylistNotFoundErrorMessage" xml:space="preserve">
+    <value>Playlist not found.</value>
+  </data>
 </root>
