--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -329,4 +329,7 @@
   <data name="Uploaded" xml:space="preserve">
     <value>uploaded videos</value>
   </data>
+  <data name="AdvertisingPost" xml:space="preserve">
+    <value>Advertising post</value>
+  </data>
 </root>
