--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -401,7 +401,7 @@
   <data name="IsAutoplay" xml:space="preserve">
     <value>Autoplay video</value>
   </data>
-  <data name="AddToWatchLater" xml:space="preserve">
+  <data name="WatchLater" xml:space="preserve">
     <value>watch later</value>
   </data>
 </root>
