--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -404,4 +404,7 @@
   <data name="WatchLater" xml:space="preserve">
     <value>посмотреть позже</value>
   </data>
+  <data name="PlayAll" xml:space="preserve">
+    <value>Воспроизвести все</value>
+  </data>
 </root>
