--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -171,7 +171,7 @@
     <value>Items not found</value>
   </data>
   <data name="Favorites" xml:space="preserve">
-    <value>favorites</value>
+    <value>Favorites</value>
   </data>
   <data name="Feedback" xml:space="preserve">
     <value>feedback</value>
