--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -165,7 +165,7 @@
     <value>Элементы не найдены</value>
   </data>
   <data name="Favorites" xml:space="preserve">
-    <value>избранное</value>
+    <value>Избранное</value>
   </data>
   <data name="Feedback" xml:space="preserve">
     <value>обратная связь</value>
