--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -434,4 +434,7 @@
   <data name="Title" xml:space="preserve">
     <value>Title</value>
   </data>
+  <data name="Deleting" xml:space="preserve">
+    <value>Deleting...</value>
+  </data>
 </root>
