--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -434,4 +434,7 @@
   <data name="Title" xml:space="preserve">
     <value>Наименование</value>
   </data>
+  <data name="Deleting" xml:space="preserve">
+    <value>Удаление...</value>
+  </data>
 </root>
