--- a/LiteTube/Resources/AppResources.pt-BR.resx
+++ b/LiteTube/Resources/AppResources.pt-BR.resx
@@ -122,215 +122,215 @@
     <comment>Controls the FlowDirection for all elements in the RootFrame. Set to the traditional direction of this resource file's language</comment>
   </data>
   <data name="ResourceLanguage" xml:space="preserve">
-    <value>en-US</value>
+    <value>pt-BR</value>
     <comment>Controls the Language and ensures that the font for all elements in the RootFrame aligns with the app's language. Set to the language code of this resource file's language.</comment>
   </data>
   <data name="ApplicationTitle" xml:space="preserve">
     <value>LightTube</value>
   </data>
   <data name="Activity" xml:space="preserve">
-    <value>Activity</value>
+    <value>Actividades Recentes</value>
   </data>
   <data name="About" xml:space="preserve">
-    <value>About</value>
+    <value>Sobre</value>
   </data>
   <data name="AboutText" xml:space="preserve">
-    <value>Easy-to-use application for Youtube with intuitive user interface.</value>
+    <value>Aplicação para o YouTube fácil de usar com interface de usuário intuitiva.</value>
   </data>
   <data name="AddToFavorites" xml:space="preserve">
-    <value>to favorites</value>
+    <value>adicionar aos Favoritos</value>
   </data>
   <data name="Cancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Cancelar</value>
   </data>
   <data name="ChannelInfo" xml:space="preserve">
-    <value>channel info</value>
+    <value>sobre o canal</value>
   </data>
   <data name="Channels" xml:space="preserve">
-    <value>channels</value>
+    <value>canais</value>
   </data>
   <data name="CheckConnection" xml:space="preserve">
-    <value>Check internet connection</value>
+    <value>Verifique sua conexão</value>
   </data>
   <data name="Comments" xml:space="preserve">
-    <value>comments</value>
+    <value>comentários</value>
   </data>
   <data name="Copyright" xml:space="preserve">
     <value>Copyright © 2017. All right reserved.</value>
   </data>
   <data name="CopyVideoLink" xml:space="preserve">
-    <value>copy video link</value>
+    <value>copiar url do vídeo</value>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>delete</value>
+    <value>excluir</value>
   </data>
   <data name="Details" xml:space="preserve">
-    <value>details</value>
+    <value>detalhes</value>
   </data>
   <data name="Empty" xml:space="preserve">
-    <value>Items not found</value>
+    <value>Elementos não encontrado</value>
   </data>
   <data name="Favorites" xml:space="preserve">
-    <value>Favorites</value>
+    <value>Favoritos</value>
   </data>
   <data name="Feedback" xml:space="preserve">
-    <value>feedback</value>
+    <value>realimentação</value>
   </data>
   <data name="Home" xml:space="preserve">
-    <value>Home</value>
+    <value>Casa</value>
   </data>
   <data name="JoinedString" xml:space="preserve">
     <value>joined</value>
   </data>
   <data name="Loading" xml:space="preserve">
-    <value>Loading...</value>
+    <value>Carregando...</value>
   </data>
   <data name="Menu" xml:space="preserve">
-    <value>Menu</value>
+    <value>Cardápio</value>
   </data>
   <data name="MostPopular" xml:space="preserve">
-    <value>Most popular</value>
+    <value>Em alta</value>
   </data>
   <data name="NoMatchVideo" xml:space="preserve">
-    <value>No matching YouTube video or audio stream URI could be found. The video may not be available in your country, is private or uses RTMPE (protected streaming).</value>
+    <value>Nenhuma correspondência ao vídeo do YouTube ou stream de áudio URI pode ser encontrado. O vídeo pode não estar disponível no seu país, pode particular ou usa RTMPE (protegida de streaming).</value>
   </data>
   <data name="PublishedAt" xml:space="preserve">
-    <value>Published at</value>
+    <value>Publicado em</value>
   </data>
   <data name="RecommendedForYou" xml:space="preserve">
-    <value>recommended for you</value>
+    <value>recomendado para você</value>
   </data>
   <data name="Refresh" xml:space="preserve">
-    <value>Refresh</value>
+    <value>Atualizar</value>
   </data>
   <data name="RelatedVideos" xml:space="preserve">
-    <value>related videos</value>
+    <value>vídeos relacionados</value>
   </data>
   <data name="Save" xml:space="preserve">
-    <value>Save</value>
+    <value>Salvar</value>
   </data>
   <data name="SelectRegion" xml:space="preserve">
-    <value>Select region</value>
+    <value>Selecionar região</value>
   </data>
   <data name="Send" xml:space="preserve">
-    <value>Send</value>
+    <value>Enviar</value>
   </data>
   <data name="Settings" xml:space="preserve">
-    <value>settings</value>
+    <value>configurações</value>
   </data>
   <data name="SignIn" xml:space="preserve">
-    <value>Sign In</value>
+    <value>Entrar</value>
   </data>
   <data name="SignInTooltip" xml:space="preserve">
-    <value>Please sign in to use this features</value>
+    <value>Por favor, entre para usar este recurso</value>
   </data>
   <data name="SignOut" xml:space="preserve">
-    <value>Sign out</value>
+    <value>Sair</value>
   </data>
   <data name="Subscribe" xml:space="preserve">
-    <value>Subscribe</value>
+    <value>Inscrever-se</value>
   </data>
   <data name="Subscribers" xml:space="preserve">
-    <value>subscribers</value>
+    <value>assinantes</value>
   </data>
   <data name="Subscriptions" xml:space="preserve">
-    <value>subscriptions</value>
+    <value>inscrições</value>
   </data>
   <data name="Unsubscribe" xml:space="preserve">
-    <value>Unsubscribe</value>
+    <value>Cancelar subscrição</value>
   </data>
   <data name="UsingSoftware" xml:space="preserve">
-    <value>Third-party software</value>
+    <value>Software de terceiros</value>
   </data>
   <data name="Version" xml:space="preserve">
-    <value>Version</value>
+    <value>Versão</value>
   </data>
   <data name="VideoCategories" xml:space="preserve">
-    <value>Video categories</value>
+    <value>Categorias de vídeos</value>
   </data>
   <data name="VideoQuality" xml:space="preserve">
-    <value>Video quality</value>
+    <value>Qualidade de vídeo</value>
   </data>
   <data name="videos" xml:space="preserve">
-    <value>videos</value>
+    <value>vídeos</value>
   </data>
   <data name="Views" xml:space="preserve">
-    <value>views</value>
+    <value>visualizações</value>
   </data>
   <data name="WatchHistory" xml:space="preserve">
-    <value>watch history</value>
+    <value>histórico</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Close</value>
+    <value>Fechar</value>
   </data>
   <data name="ErrorMessage" xml:space="preserve">
-    <value>Unable to perform the operation. Please try again.</value>
+    <value>Não é possível executar a operação. Por favor, tente novamente.</value>
   </data>
   <data name="ErrorTitle" xml:space="preserve">
-    <value>Error</value>
+    <value>Erro</value>
   </data>
   <data name="ExceptionTitle" xml:space="preserve">
-    <value>Whoops! Something went wrong!</value>
+    <value>Ups! Algo deu errado!</value>
   </data>
   <data name="ChannelNotFoundTooltip" xml:space="preserve">
-    <value>Channel not found. Try to create channel on YouTube site.</value>
+    <value>Canal não encontrado. Tente criar um canal no site do YouTube.</value>
   </data>
   <data name="LikedVideos" xml:space="preserve">
-    <value>liked</value>
+    <value>gostei</value>
   </data>
   <data name="FeedbackMessage" xml:space="preserve">
-    <value>Type your feedback here</value>
+    <value>Diga seu feedback aqui</value>
   </data>
   <data name="Theme" xml:space="preserve">
-    <value>Theme</value>
+    <value>Tema</value>
   </data>
   <data name="Days5Ago" xml:space="preserve">
-    <value>{0} days ago</value>
+    <value>{0} dias atrás</value>
   </data>
   <data name="DaysAgo" xml:space="preserve">
-    <value>{0} days ago</value>
+    <value>{0} dias atrás</value>
   </data>
   <data name="MonthAgo" xml:space="preserve">
-    <value>a month ago</value>
+    <value>mês atrás</value>
   </data>
   <data name="Months4Ago" xml:space="preserve">
-    <value>{0} months ago</value>
+    <value>{0} meses atrás</value>
   </data>
   <data name="MonthsAgo" xml:space="preserve">
-    <value>{0} months ago</value>
+    <value>{0} meses atrás</value>
   </data>
   <data name="Today" xml:space="preserve">
-    <value>today</value>
+    <value>hoje</value>
   </data>
   <data name="WeekAgo" xml:space="preserve">
-    <value>a week ago</value>
+    <value>semana atrás</value>
   </data>
   <data name="WeeksAgo" xml:space="preserve">
-    <value>{0} weeks ago</value>
+    <value>{0} semanas atrás</value>
   </data>
   <data name="YearAgo" xml:space="preserve">
-    <value>a year ago</value>
+    <value>ano atrás</value>
   </data>
   <data name="Years4Ago" xml:space="preserve">
-    <value>{0} years ago</value>
+    <value>{0} anos atrás</value>
   </data>
   <data name="YearsAgo" xml:space="preserve">
-    <value>{0} years ago</value>
+    <value>{0} anos atrás</value>
   </data>
   <data name="Yesterday" xml:space="preserve">
-    <value>yesterday</value>
+    <value>ontem</value>
   </data>
   <data name="Playlists" xml:space="preserve">
     <value>playlists</value>
   </data>
   <data name="PlaylistNotFoundErrorMessage" xml:space="preserve">
-    <value>Playlist not found.</value>
+    <value>Playlist não encontrada</value>
   </data>
   <data name="Uploaded" xml:space="preserve">
-    <value>uploaded videos</value>
+    <value>vídeos enviados</value>
   </data>
   <data name="AdvertisingPost" xml:space="preserve">
-    <value>Advertising post</value>
+    <value>Publicidade</value>
   </data>
   <data name="AllTime" xml:space="preserve">
     <value>all time</value>
@@ -339,102 +339,102 @@
     <value>any</value>
   </data>
   <data name="High" xml:space="preserve">
-    <value>high (HD)</value>
+    <value>alto qualidade(HD)</value>
   </data>
   <data name="LastHour" xml:space="preserve">
-    <value>last hour</value>
+    <value>última hora</value>
   </data>
   <data name="Long" xml:space="preserve">
-    <value>long</value>
+    <value>longo</value>
   </data>
   <data name="Medium" xml:space="preserve">
-    <value>medium</value>
+    <value>médio</value>
   </data>
   <data name="Rating" xml:space="preserve">
-    <value>rating</value>
+    <value>classificação</value>
   </data>
   <data name="Relevance" xml:space="preserve">
-    <value>relevance</value>
+    <value>relevância</value>
   </data>
   <data name="SearchDuration" xml:space="preserve">
-    <value>duration</value>
+    <value>duração</value>
   </data>
   <data name="SearchOrder" xml:space="preserve">
-    <value>order by</value>
+    <value>ordenar por</value>
   </data>
   <data name="SearchQuality" xml:space="preserve">
-    <value>quality</value>
+    <value>qualidade</value>
   </data>
   <data name="SearchUpload" xml:space="preserve">
-    <value>upload date</value>
+    <value>data do upload</value>
   </data>
   <data name="Short" xml:space="preserve">
-    <value>short</value>
+    <value>curto</value>
   </data>
   <data name="Standart" xml:space="preserve">
-    <value>standart</value>
+    <value>padrão</value>
   </data>
   <data name="ThisMonth" xml:space="preserve">
-    <value>this month</value>
+    <value>este mês</value>
   </data>
   <data name="ThisWeek" xml:space="preserve">
-    <value>this week</value>
+    <value>esta semana</value>
   </data>
   <data name="ThisYear" xml:space="preserve">
-    <value>this year</value>
+    <value>este ano</value>
   </data>
   <data name="TToday" xml:space="preserve">
-    <value>today</value>
+    <value>hoje</value>
   </data>
   <data name="UploadDate" xml:space="preserve">
-    <value>upload date</value>
+    <value>data do upload</value>
   </data>
   <data name="ViewCount" xml:space="preserve">
-    <value>view count</value>
+    <value>contagem de visualizações</value>
   </data>
   <data name="Language" xml:space="preserve">
-    <value>Language</value>
+    <value>Linguagem</value>
   </data>
   <data name="RestartApp" xml:space="preserve">
-    <value>Please restart the app to apply changes</value>
+    <value>Por favor, reinicie o aplicativo para aplicar as alterações</value>
   </data>
   <data name="IsAutoplay" xml:space="preserve">
-    <value>Autoplay video</value>
+    <value>Vídeo autoplay</value>
   </data>
   <data name="WatchLater" xml:space="preserve">
-    <value>watch later</value>
+    <value>assistir mais tarde</value>
   </data>
   <data name="PlayAll" xml:space="preserve">
-    <value>Play all</value>
+    <value>Reproduzir tudo</value>
   </data>
   <data name="AddToPlaylist" xml:space="preserve">
     <value>to playlist</value>
   </data>
   <data name="Manage" xml:space="preserve">
-    <value>Manage</value>
+    <value>Gerenciar</value>
   </data>
   <data name="ManagePlaylist" xml:space="preserve">
-    <value>Manage playlists</value>
+    <value>Gerenciar playlists</value>
   </data>
   <data name="Create" xml:space="preserve">
-    <value>Create</value>
+    <value>Criar</value>
   </data>
   <data name="StatusPrivate" xml:space="preserve">
-    <value>Private</value>
+    <value>Privado</value>
   </data>
   <data name="StatusPublic" xml:space="preserve">
-    <value>Public</value>
+    <value>Público</value>
   </data>
   <data name="Access" xml:space="preserve">
-    <value>Access</value>
+    <value>Acesso</value>
   </data>
   <data name="Description" xml:space="preserve">
-    <value>Description</value>
+    <value>Descrição</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Title</value>
+    <value>Título</value>
   </data>
   <data name="Deleting" xml:space="preserve">
-    <value>Deleting...</value>
+    <value>Deletando...</value>
   </data>
 </root>
