--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -150,7 +150,7 @@
     <value>Проверьте соединение с интернет</value>
   </data>
   <data name="Comments" xml:space="preserve">
-    <value>коментарии</value>
+    <value>комментарии</value>
   </data>
   <data name="Copyright" xml:space="preserve">
     <value>Copyright © 2017. Все права защищены.</value>
