--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -443,4 +443,7 @@
   <data name="LocalizationThanks" xml:space="preserve">
     <value>Thank you Jotta Maciel to Portuguese (Brazil) localization</value>
   </data>
+  <data name="Donate" xml:space="preserve">
+    <value>Donate</value>
+  </data>
 </root>
