--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -443,4 +443,7 @@
   <data name="LocalizationThanks" xml:space="preserve">
     <value>Спасибо Jotta Maciel за перевод на португальский (Бразилия) язык.</value>
   </data>
+  <data name="Donate" xml:space="preserve">
+    <value>Donate</value>
+  </data>
 </root>
