--- a/LiteTube/Resources/AppResources.resx
+++ b/LiteTube/Resources/AppResources.resx
@@ -444,6 +444,9 @@
     <value>Thank you Jotta Maciel to Portuguese (Brazil) localization</value>
   </data>
   <data name="Donate" xml:space="preserve">
-    <value>Donate</value>
+    <value>Donations</value>
+  </data>
+  <data name="DonationDescription" xml:space="preserve">
+    <value>Donation are welcom but not mandatory. If you are enjoing LightTube, please feel free to donate! These donations help support the continued development of LighTube.</value>
   </data>
 </root>
