--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -444,6 +444,9 @@
     <value>Спасибо Jotta Maciel за перевод на португальский (Бразилия) язык.</value>
   </data>
   <data name="Donate" xml:space="preserve">
-    <value>Donate</value>
+    <value>Помощь проекту</value>
+  </data>
+  <data name="DonationDescription" xml:space="preserve">
+    <value>Помощь проекту приветствуются, но не обязательна. Эти пожертвования помогают поддерживать дальнейшее развитие LighTube.</value>
   </data>
 </root>
