--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -129,7 +129,7 @@
     <value>LightTube</value>
   </data>
   <data name="Activity" xml:space="preserve">
-    <value>Лента новостей</value>
+    <value>Новости</value>
   </data>
   <data name="About" xml:space="preserve">
     <value>О программе</value>
