--- a/LiteTube/Resources/AppResources.pt-BR.resx
+++ b/LiteTube/Resources/AppResources.pt-BR.resx
@@ -126,7 +126,7 @@
     <comment>Controls the Language and ensures that the font for all elements in the RootFrame aligns with the app's language. Set to the language code of this resource file's language.</comment>
   </data>
   <data name="ApplicationTitle" xml:space="preserve">
-    <value>LightTube</value>
+    <value>LightTube Pro</value>
   </data>
   <data name="Activity" xml:space="preserve">
     <value>Actividades recentes</value>
