--- a/LiteTube/Resources/AppResources.ru-RU.resx
+++ b/LiteTube/Resources/AppResources.ru-RU.resx
@@ -126,7 +126,7 @@
     <comment>Controls the Language and ensures that the font for all elements in the RootFrame aligns with the app's language. Set to the language code of this resource file's language.</comment>
   </data>
   <data name="ApplicationTitle" xml:space="preserve">
-    <value>LightTube Pro</value>
+    <value>LightTube</value>
   </data>
   <data name="Activity" xml:space="preserve">
     <value>Новости</value>
@@ -153,7 +153,7 @@
     <value>комментарии</value>
   </data>
   <data name="Copyright" xml:space="preserve">
-    <value>Copyright © 2017. Все права защищены.</value>
+    <value>Copyright © 2018. Все права защищены.</value>
   </data>
   <data name="CopyVideoLink" xml:space="preserve">
     <value>копировать ссылку на видео</value>
